[gd_scene load_steps=34 format=2]

[ext_resource path="res://robotst2.tscn" type="PackedScene" id=1]
[ext_resource path="res://relic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Root.gd" type="Script" id=3]
[ext_resource path="res://Water.gd" type="Script" id=4]
[ext_resource path="res://DisplayTimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/rough map.png" type="Texture" id=6]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 6 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6, 9 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6, 18 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 12, 6 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 24, 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 65, 6 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6, 20 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 36 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 6, 30 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 6, 15 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 98, 6 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 38 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 99 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 38, 6 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 24, 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6, 67 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 112.765, 8.5166 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 17, 6 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 22, 6 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 22, 6 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 6, 22 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 6, 33 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 6, 13 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 6, 62 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 6, 18 )

[sub_resource type="PhysicsMaterial" id=4]

[node name="Root" type="Node"]
script = ExtResource( 3 )
throwPow = 2000
throwup = -5
throwdown = 10

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2( 870, 406 )
collision_layer = 8
collision_mask = 5
physics_material_override = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D6" type="CollisionShape2D" parent="floor"]
position = Vector2( 211, 974 )
shape = SubResource( 2 )

[node name="CollisionShape2D42" type="CollisionShape2D" parent="floor"]
position = Vector2( 211, 1012 )
shape = SubResource( 2 )

[node name="CollisionShape2D44" type="CollisionShape2D" parent="floor"]
position = Vector2( 193, 1007 )
shape = SubResource( 17 )

[node name="CollisionShape2D45" type="CollisionShape2D" parent="floor"]
position = Vector2( 229, 980 )
shape = SubResource( 17 )

[node name="CollisionShape2D43" type="CollisionShape2D" parent="floor"]
position = Vector2( 312, 993 )
shape = SubResource( 2 )

[node name="CollisionShape2D46" type="CollisionShape2D" parent="floor"]
position = Vector2( 294, 959 )
shape = SubResource( 17 )

[node name="CollisionShape2D47" type="CollisionShape2D" parent="floor"]
position = Vector2( 330, 988 )
shape = SubResource( 17 )

[node name="CollisionShape2D48" type="CollisionShape2D" parent="floor"]
position = Vector2( 465, 958 )
shape = SubResource( 2 )

[node name="CollisionShape2D49" type="CollisionShape2D" parent="floor"]
position = Vector2( 447, 950 )
shape = SubResource( 17 )

[node name="CollisionShape2D52" type="CollisionShape2D" parent="floor"]
position = Vector2( 417, 945 )
shape = SubResource( 18 )

[node name="CollisionShape2D53" type="CollisionShape2D" parent="floor"]
position = Vector2( 367, 945 )
shape = SubResource( 18 )

[node name="CollisionShape2D51" type="CollisionShape2D" parent="floor"]
position = Vector2( 411, 967 )
shape = SubResource( 19 )

[node name="CollisionShape2D54" type="CollisionShape2D" parent="floor"]
position = Vector2( 373, 967 )
shape = SubResource( 19 )

[node name="CollisionShape2D50" type="CollisionShape2D" parent="floor"]
position = Vector2( 483, 950 )
shape = SubResource( 17 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="floor"]
position = Vector2( 145, 916 )
shape = SubResource( 2 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="floor"]
position = Vector2( 312, 954 )
shape = SubResource( 2 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="floor"]
position = Vector2( 392, 933 )
shape = SubResource( 20 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="floor"]
position = Vector2( 465, 920 )
shape = SubResource( 2 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="floor"]
position = Vector2( 536, 824 )
shape = SubResource( 2 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="floor"]
position = Vector2( 419, 824 )
shape = SubResource( 8 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="floor"]
position = Vector2( 900, 792 )
shape = SubResource( 2 )

[node name="CollisionShape2D25" type="CollisionShape2D" parent="floor"]
position = Vector2( 1842, 919 )
shape = SubResource( 2 )

[node name="CollisionShape2D27" type="CollisionShape2D" parent="floor"]
position = Vector2( 1878, 952 )
shape = SubResource( 2 )

[node name="CollisionShape2D26" type="CollisionShape2D" parent="floor"]
position = Vector2( 1824, 898 )
shape = SubResource( 10 )

[node name="CollisionShape2D28" type="CollisionShape2D" parent="floor"]
position = Vector2( 1833, 938 )
shape = SubResource( 10 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="floor"]
position = Vector2( 1066, 697 )
shape = SubResource( 2 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="floor"]
position = Vector2( 725, 865 )
shape = SubResource( 2 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="floor"]
position = Vector2( 527, 918 )
shape = SubResource( 2 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="floor"]
position = Vector2( 509, 884 )
shape = SubResource( 5 )

[node name="CollisionShape2D55" type="CollisionShape2D" parent="floor"]
position = Vector2( 660, 667 )
shape = SubResource( 21 )

[node name="CollisionShape2D59" type="CollisionShape2D" parent="floor"]
position = Vector2( 436, 620 )
shape = SubResource( 21 )

[node name="CollisionShape2D57" type="CollisionShape2D" parent="floor"]
position = Vector2( 616, 713 )
shape = SubResource( 23 )

[node name="CollisionShape2D60" type="CollisionShape2D" parent="floor"]
position = Vector2( 600, 665 )
shape = SubResource( 23 )

[node name="CollisionShape2D58" type="CollisionShape2D" parent="floor"]
position = Vector2( 437, 713 )
shape = SubResource( 23 )

[node name="CollisionShape2D56" type="CollisionShape2D" parent="floor"]
position = Vector2( 528, 675 )
shape = SubResource( 22 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="floor"]
position = Vector2( 348, 792 )
shape = SubResource( 7 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="floor"]
position = Vector2( 287, 666 )
shape = SubResource( 6 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="floor"]
position = Vector2( 137, 843 )
shape = SubResource( 2 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="floor"]
position = Vector2( 337, 702 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="floor"]
position = Vector2( 1126, 382 )
shape = SubResource( 2 )

[node name="CollisionShape2D24" type="CollisionShape2D" parent="floor"]
position = Vector2( 654, 361 )
shape = SubResource( 24 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="floor"]
position = Vector2( 1241, 449 )
shape = SubResource( 2 )

[node name="CollisionShape2D41" type="CollisionShape2D" parent="floor"]
position = Vector2( 1536, 535 )
shape = SubResource( 2 )

[node name="CollisionShape2D36" type="CollisionShape2D" parent="floor"]
position = Vector2( 1755, 524 )
shape = SubResource( 15 )

[node name="CollisionShape2D40" type="CollisionShape2D" parent="floor"]
position = Vector2( 1649, 524 )
rotation = 0.558505
shape = SubResource( 15 )

[node name="CollisionShape2D39" type="CollisionShape2D" parent="floor"]
position = Vector2( 1597, 606 )
rotation = 0.558505
shape = SubResource( 15 )

[node name="CollisionShape2D37" type="CollisionShape2D" parent="floor"]
position = Vector2( 1788, 467 )
rotation = 0.558505
shape = SubResource( 15 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="floor"]
position = Vector2( 1183, 538 )
shape = SubResource( 2 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="floor"]
position = Vector2( 1056, 301 )
shape = SubResource( 9 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="floor"]
position = Vector2( 1831, 427 )
rotation = -1.01229
shape = SubResource( 12 )

[node name="CollisionShape2D38" type="CollisionShape2D" parent="floor"]
position = Vector2( 1638, 570 )
rotation = -1.01229
shape = SubResource( 12 )

[node name="CollisionShape2D61" type="CollisionShape2D" parent="floor"]
position = Vector2( 1349, 975 )
rotation = -1.01229
shape = SubResource( 12 )

[node name="CollisionShape2D29" type="CollisionShape2D" parent="floor"]
position = Vector2( 625, 588 )
shape = SubResource( 11 )

[node name="CollisionShape2D30" type="CollisionShape2D" parent="floor"]
position = Vector2( 680, 588 )
shape = SubResource( 13 )

[node name="CollisionShape2D35" type="CollisionShape2D" parent="floor"]
position = Vector2( 652, 530 )
shape = SubResource( 14 )

[node name="CollisionShape2D31" type="CollisionShape2D" parent="floor"]
position = Vector2( 636, 544 )
shape = SubResource( 10 )

[node name="CollisionShape2D32" type="CollisionShape2D" parent="floor"]
position = Vector2( 636, 610 )
shape = SubResource( 10 )

[node name="CollisionShape2D33" type="CollisionShape2D" parent="floor"]
position = Vector2( 696, 610 )
shape = SubResource( 10 )

[node name="CollisionShape2D34" type="CollisionShape2D" parent="floor"]
position = Vector2( 696, 546 )
shape = SubResource( 25 )

[node name="CollisionShape2D62" type="CollisionShape2D" parent="floor"]
position = Vector2( 1381, 1008 )
shape = SubResource( 11 )

[node name="CollisionShape2D63" type="CollisionShape2D" parent="floor"]
position = Vector2( 1436, 1020 )
shape = SubResource( 13 )

[node name="CollisionShape2D64" type="CollisionShape2D" parent="floor"]
position = Vector2( 1408, 932 )
shape = SubResource( 14 )

[node name="CollisionShape2D69" type="CollisionShape2D" parent="floor"]
position = Vector2( 1408, 974 )
shape = SubResource( 14 )

[node name="CollisionShape2D65" type="CollisionShape2D" parent="floor"]
position = Vector2( 1392, 969 )
shape = SubResource( 27 )

[node name="CollisionShape2D66" type="CollisionShape2D" parent="floor"]
position = Vector2( 1370, 1015 )
shape = SubResource( 28 )

[node name="CollisionShape2D67" type="CollisionShape2D" parent="floor"]
position = Vector2( 1529, 977 )
shape = SubResource( 10 )

[node name="CollisionShape2D68" type="CollisionShape2D" parent="floor"]
position = Vector2( 1452, 988 )
shape = SubResource( 26 )

[node name="CollisionShape2D70" type="CollisionShape2D" parent="floor"]
position = Vector2( 1430, 363 )
shape = SubResource( 2 )

[node name="CollisionShape2D72" type="CollisionShape2D" parent="floor"]
position = Vector2( 1448, 348 )
shape = SubResource( 29 )

[node name="CollisionShape2D71" type="CollisionShape2D" parent="floor"]
position = Vector2( 1523, 358 )
shape = SubResource( 2 )

[node name="CollisionShape2D73" type="CollisionShape2D" parent="floor"]
position = Vector2( 1541, 343 )
shape = SubResource( 29 )

[node name="CollisionShape2D74" type="CollisionShape2D" parent="floor"]
position = Vector2( 1617, 333 )
shape = SubResource( 2 )

[node name="CollisionShape2D75" type="CollisionShape2D" parent="floor"]
position = Vector2( 1635, 318 )
shape = SubResource( 29 )

[node name="CollisionShape2D76" type="CollisionShape2D" parent="floor"]
position = Vector2( 1721, 333 )
shape = SubResource( 2 )

[node name="CollisionShape2D77" type="CollisionShape2D" parent="floor"]
position = Vector2( 1739, 318 )
shape = SubResource( 29 )

[node name="DisplayTimer" parent="." instance=ExtResource( 5 )]

[node name="PC" parent="." instance=ExtResource( 1 )]
position = Vector2( 2226, 1449 )
chargeAmt = 5
vIncWet = -70
sIncWet = -20

[node name="Camera2D" type="Camera2D" parent="PC"]
current = true
zoom = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_lock_": true
}

[node name="levelig" type="StaticBody2D" parent="."]
position = Vector2( 1410, 607 )
scale = Vector2( 0.4, 0.4 )
collision_layer = 8
collision_mask = 7
physics_material_override = SubResource( 4 )

[node name="LeftWall" type="CollisionPolygon2D" parent="levelig"]
position = Vector2( 85, 80 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 619, 395, 459, 495, 324, 580, 189, 640, 109, 645, 89, 630, 44, 630, -11, 670, -486, 670, -616, 615, -746, 470, -901, 355, -1006, 370, -1221, 330, -1556, 340, -1701, 340, -1751, 360, -1811, 425, -1911, 490, -2006, 550, -2011, 585, -2001, 605, -2006, 640, -2136, 810, -2126, 860, -2166, 920, -2151, 960, -2161, 1100, -2126, 1150, -2121, 1195, -2096, 1235, -2101, 1275, -2071, 1335, -2061, 1400, -2066, 1445, -2041, 1475, -2031, 1535, -2041, 1555, -2028.11, 1586.59, -2031, 2375, -2036, 2405, -2066, 2445, -2066, 2470, -2061, 2485, -2061, 2510, -2096, 2545, -2091, 2575, -2091, 2605, -2121, 2635, -2131, 2700, -2146, 2735, -2151, 2800, -2276, 3180, -2406, 3590, -2375, 3810, -2210, 3810, -2190, 3920, -2101, 3960, -1761, 4090, -1490, 4280, -1330, 4345, -960, 4410, -455, 4390, 285, 4375, 945, 4255, 1455, 4170, 1800, 4170, 2175, 4055, 2380, 4055, 2585, 4085, 2488, 4192, 2400, 4760, -72, 4712, -1521, 4895, -2876, 4920, -2871, 3895, -2876, 3210, -2876, 2665, -2876, 1015, -2871, -1160, -691, -1170, -211, -1165, -301, -35.0001, -161, 4.99988, -81, -5.00012, 644, -0.00012207, 694, 49.9999, 709, 115, 729, 150, 729, 265, 684, 340 )

[node name="MiddleIsland" type="CollisionPolygon2D" parent="levelig"]
position = Vector2( 90, 82.5 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -975, 2020, -1155, 2045, -1215, 2020, -1221, 1635, -1181, 1620, -1031, 1620, -1006, 1650, -846, 1650, -826, 1680, -666, 1680, -631, 1685, -616, 1705, -546, 1710, -496, 1745, -466, 1755, -431, 1745, -401, 1745, -381, 1765, -281, 1770, -256, 1790, -256, 1800, -146, 1800, -121, 1805, -76, 1830, -31, 1835, -16, 1855, 4, 1855, 34, 1885, 39, 1890, 59, 1895, 96.6846, 1915.94, 114, 1920, 121.464, 1925.33, 139, 1925, 141.7, 1930.4, 154, 1930, 164, 1945, 249, 1945, 279, 1960, 289, 1980, 304.297, 1980, 354, 1980, 694, 1980, 714, 1985, 774, 2015, 779, 2020, 799, 2015, 814, 2010, 889, 2010, 899, 2015, 944, 2015, 974, 2010, 1029, 2005, 1049, 1990, 1124, 1990, 1129, 1985, 1144, 1985, 1149, 1980, 1189, 1980, 1194, 1985, 1199, 1990, 1229, 1990, 1234, 1985, 1244, 1980, 1284, 1980, 1289, 1970, 1294, 1965, 1304, 1960, 1314, 1955, 1339, 1955, 1354, 1960, 1359, 1965, 1374, 1965, 1379, 1960, 1394, 1960, 1399, 1955, 1414, 1955, 1419, 1950, 1424, 1950, 1429, 1955, 1439, 1955, 1449, 1960, 1459, 1965, 1479, 1965, 1489, 1960, 1494, 1955, 1504, 1950, 1519, 1950, 1529, 1955, 1534, 1960, 1549, 1960, 1559, 1965, 1569, 1960, 1579, 1960, 1589, 1965, 1594, 1970, 1599, 1975, 1604, 1985, 1609, 1995, 1614, 2015, 1619, 2015, 1619, 2025, 1629, 2025, 1629, 2030, 1634, 2030, 1634, 2035, 1639, 2035, 1639, 2040, 1644, 2040, 1644, 2045, 1649, 2045, 1649, 2050, 1654, 2050, 1654, 2055, 1659, 2055, 1659, 2065, 1664, 2065, 1664, 2070, 1669, 2070, 1669, 2075.04, 1674, 2075, 1674, 2090, 1679, 2090, 1679, 2105, 1684, 2105, 1684, 2120, 1689, 2120, 1689, 2130, 1694, 2130, 1694, 2155, 1699, 2155, 1699, 2160, 1709, 2160, 1709, 2165, 1714, 2165, 1714, 2175.04, 1719, 2175, 1719, 2185, 1724, 2185, 1724, 2215, 1719, 2220, 1714, 2230, 1709, 2240, 1709, 2255, 1714, 2265, 1714, 2285, 1709, 2290, 1704, 2300, 1704, 2320, 1704, 2340, 1699, 2350, 1694, 2355, 1689, 2370, 1689, 2390, 1694, 2405, 1694, 2425, 1689, 2430, 1684, 2440, 1679, 2455, 1674, 2460, 1669, 2480, 1664, 2490, 1659, 2500, 1654, 2510, 1649, 2515, 1644, 2520, 1634, 2525, 1629, 2530, 1624, 2535, 1619, 2540, 1614, 2545, 1609, 2550, 1599, 2555, 1594, 2560, 1589, 2565, 1579, 2570, 1554, 2575, 1504, 2580, 1499, 2585, 1424, 2585, 1424, 2590, 1409, 2595, 1369, 2595, 1324, 2590, 1294, 2585, 1294, 2590, 1259, 2595, 1164, 2595, 1149, 2590, 1104, 2590, 1089, 2595, 959, 2595, 959, 2600, 954, 2605, 944, 2610, 939, 2615, 929, 2620, 924, 2625, 853.309, 2389.36, 810, 2245, 760, 2155, 665, 2120, 415, 2105, 275, 2030, -95, 1925, -605, 1810, -750, 1820, -820, 1880, -820, 2450, 170, 2460, 580, 2450, 630, 2250, 685, 2250, 604, 2620, 599, 2615, 594, 2610, 584, 2605, 584, 2600, 475, 2590, 339, 2590, 295, 2595, 249, 2590, 115, 2600, -56, 2595, -446, 2595, -695, 2585, -825, 2620, -895, 2650, -975, 2705, -975, 2220 )

[node name="RightWall" type="CollisionPolygon2D" parent="levelig"]
position = Vector2( 90, 80 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 2320, 4192, 2525, 4085, 3475, 4105, 4205, 4085, 4345, 4085, 4400, 4055, 5064, 3990, 5134, 3940, 5369, 3820, 5574, 3745, 5669, 3715, 5714, 3745, 6429, 3745, 6499, 3745, 6529, 3705, 6549, 3650, 6599, 3600, 6604, 3550, 6629, 3500, 6624, 3465, 6624, 3360, 6634, 3310, 5949, 3185, 5684, 2750, 5879, 2745, 5939, 2940, 5989, 3035, 6009, 3055, 6144, 3085, 6314, 3100, 6334, 3085, 6444, 3065, 6484, 3055, 6504, 3010, 6509, 3000, 6519, 2985, 6534, 2970, 6534, 2910, 6529, 2895, 6514, 2870, 6509, 2840, 6334, 2625, 6209, 2640, 5894, 2550, 5324, 2715, 5229, 2710, 5184, 2680, 5094, 2680, 5074, 2685, 4614, 2685, 4579, 2680, 4359, 2650, 4259, 2625, 4154, 2625, 4004, 2595, 3909, 2585, 3564, 2565, 3459, 2560, 3244, 2535, 3044, 2505, 3034, 2495, 3034, 2475, 2931.82, 2473.19, 2884, 2465, 2839, 2445, 2814, 2445, 2784, 2415, 2729, 2415, 2689, 2385, 2554, 2385, 2539, 2375, 2514, 2360, 2514, 2320, 2444, 2315, 2424, 2300, 2439, 2250, 2429, 2205, 2404, 2160, 2409, 2095, 2404, 2030, 2363.44, 1971.33, 2374, 1920, 2414, 1875, 2469, 1860, 2724, 1855, 2739, 1895, 2779, 1900, 2823.03, 1885.19, 2894, 1895, 2934, 1915, 3019, 1920, 3099, 1960, 3126.88, 1941.75, 3209, 1955, 3289, 1985, 3384, 1975, 3499, 1995, 3524, 2020, 3584, 2000, 3654, 2010, 3724, 2045, 5004, 2040, 5139, 2070, 5669, 2075, 5829, 2015, 6034, 2010, 6074, 1980, 6230, 1980, 6580, 1970, 6850, 1970, 6855, 1795, 6630, 1355, 6830, 1010, 6555, 1010, 6550, 935, 6844, 935, 6934, 705, 6819, 505, 6534, 555, 6404, 485, 6379, 455, 6339, 455, 6299, 420, 6269, 435, 6179, 435, 6159, 415, 6094, 385, 6034, 365, 6029, 340, 5929, 345, 5819, 340, 5444, 345, 5369, 325, 5319, 340, 5119, 340, 4854, 465, 4504, 470, 4469, 490, 4449, 495, 4189, 510, 4029, 525, 4009, 520, 3979, 515, 3959, 520, 3949, 525, 3944, 530, 3939, 540, 3934, 545, 3914, 550, 3894, 555, 3819, 555, 3819, 550, 3784, 550, 3784, 545, 3774, 545, 3774, 550, 3764, 550, 3764, 555, 3759, 555, 3759.28, 564.719, 3754, 565, 3754, 570, 3749, 570, 3749, 575, 3744, 575, 3744, 580, 3714, 580, 3714, 575, 3674, 575, 3674, 580, 3664, 580, 3664, 585, 3624, 585, 3614, 580, 3614, 575, 3584, 580, 3559, 600, 3549, 605, 3509, 610, 3484, 615, 3199, 615, 3184, 610, 3149, 605, 3139, 600, 3124, 585, 3124, 580, 3114, 580, 3114, 575, 3074, 575, 3064, 565, 3059, 545, 3054, 525, 3034, 505, 3024, 490, 3024, 465, 3014, 465, 2994, 445, 2994, 435, 2959, 435, 2919, 405, 2894, 400, 2884, 395, 2859, 375, 2834, 370, 2814, 350, 2789, 345, 2759, 370, 2744, 375, 2699, 375, 2669, 365, 2629, 345, 2609, 325, 2604, 265, 2629, 210, 2684, 155, 2814, 94.9999, 2954, 94.9999, 2979, 64.9999, 3034, 54.9999, 3079, 29.9999, 3114, 34.9999, 3209, -30.0001, 3229, -75.0001, 3264, -95.0001, 3284, -140, 3289, -140, 3289, -145, 3294, -145, 3294, -170, 3299, -170, 3299, -195, 3304, -200, 3309, -205, 3314.07, -210.072, 3319, -215, 3324, -215, 3324, -260, 3329, -260, 3329, -270, 3339, -285, 3349, -295, 3354, -295, 3354, -340, 3364, -375, 3369, -385, 3384, -405, 3389, -440, 3394, -450, 3399, -450, 3399, -470, 3394, -470, 3394, -495, 3399, -495, 3399, -500, 3379, -500, 3364, -510, 3334, -555, 3304, -595, 3274, -625, 3244, -670, 3214, -710, 3169, -735, 3159, -740, 3149, -750, 3114, -790, 3114, -795, 2969, -795, 2944, -805, 2884, -830, 2864, -830, 2849, -840, 2834, -860, 2794, -855, 2569, -855, 2549, -860, 2534, -865, 2519, -865, 2494, -860, 2414, -860, 2394, -865, 2379, -870, 2369, -880, 2369, -910, 2369, -970, 2364, -985, 2364, -1095, 2369, -1125, 2374, -1155, 2379, -1165, 2500, -1165, 2500, -1340, 2195, -1340, 2196.8, -1165, -671, -1165, -701, -1535, 1404, -1585, 3689, -1455, 6496, -800, 8049, -265, 7072, 4400, 5536, 5008, 2240, 4784 )

[node name="BtmRight Island" type="CollisionPolygon2D" parent="levelig"]
position = Vector2( -177.5, -232.5 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 3872, 3360, 4128, 3440, 3968, 3568, 3776, 3584, 3600, 3584, 3472, 3568, 3456, 3488, 3504, 3424, 3584, 3360 )

[node name="UpRightIsland" type="CollisionPolygon2D" parent="levelig"]
position = Vector2( 297.5, -77.5 )
polygon = PoolVector2Array( 897.5, -45, 925, -52.5, 955, -40, 1037.5, -55, 1050, -67.5, 1110, -67.5, 1160, -37.5, 1160, 12.5, 1160, 47.5, 1160, 62.5, 1125, 87.5, 1100, 90, 1057.5, 122.5, 1015, 152.5, 985, 175, 982.5, 190, 965, 202.5, 912.5, 232.5, 865, 282.5, 860, 305, 875, 335, 930, 335, 940, 342.5, 937.5, 362.5, 920, 385, 916.501, 409.051, 875, 467.5, 850, 490, 827.5, 505, 802.5, 510, 785, 497.5, 662.5, 497.5, 635, 495, 622.5, 480, 582.5, 480, 562.5, 465, 522.5, 462.5, 510, 450, 490, 447.5, 467.5, 417.5, 467.5, 390, 455, 385, 447.5, 360, 450, 340, 460, 315, 467.5, 262.5, 480, 230, 495, 165, 505, 137.5, 547.5, 130, 562.5, 105, 605, 105, 645, 82.5, 657.5, 35, 687.5, 27.5, 700, 7.5, 727.5, 5, 745, -10, 767.5, -50, 882.5, -55 )

[node name="Water" type="Area2D" parent="."]
position = Vector2( 870, 406 )
collision_layer = 16
collision_mask = 7
script = ExtResource( 4 )

[node name="day1" type="CollisionPolygon2D" parent="Water"]
visible = false
position = Vector2( 522, 1195 )
scale = Vector2( 1.27035, 1 )
polygon = PoolVector2Array( 414.847, -126, 530.563, -132, 582.517, -126, 699.808, -123, 845.437, -151, 926.517, -210, 422.719, -193, -34.6361, -141, -173.968, -158, -331.405, -180, -325.895, -166, -185.776, -84, -42.508, -59, 369.977, -94 )

[node name="day2" type="CollisionPolygon2D" parent="Water"]
visible = false
position = Vector2( 490, 1224 )
scale = Vector2( 1.27035, 1 )
polygon = PoolVector2Array( 1146.93, -222, 1090.25, -103, 540.796, -71, 199.158, -32, -181.053, -32, -334.554, -157, -355.808, -324, 1125.67, -323 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="day3" type="CollisionPolygon2D" parent="Water"]
visible = false
position = Vector2( 491, 1224 )
scale = Vector2( 1.27035, 1 )
polygon = PoolVector2Array( -339.277, -520, 1145.35, -515, 1094.97, -117, 428.229, -81, -151.14, -74, -309.364, -157 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 869, 406 )
z_index = -2
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Relic2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1268, 1504 )

[node name="Relic23" parent="." instance=ExtResource( 2 )]
position = Vector2( 1275, 1360 )

[node name="Relic25" parent="." instance=ExtResource( 2 )]
position = Vector2( 1250, 1361 )

[node name="Relic26" parent="." instance=ExtResource( 2 )]
position = Vector2( 1183, 1381 )

[node name="Relic28" parent="." instance=ExtResource( 2 )]
position = Vector2( 1336, 1346 )

[node name="Relic27" parent="." instance=ExtResource( 2 )]
position = Vector2( 1079, 1401 )

[node name="Relic24" parent="." instance=ExtResource( 2 )]
position = Vector2( 979, 1389 )

[node name="Relic" parent="." instance=ExtResource( 2 )]
position = Vector2( 1891, 693 )

[node name="Relic20" parent="." instance=ExtResource( 2 )]
position = Vector2( 2667, 847 )

[node name="Relic31" parent="." instance=ExtResource( 2 )]
position = Vector2( 2624, 911 )

[node name="Relic21" parent="." instance=ExtResource( 2 )]
position = Vector2( 2399, 919 )

[node name="Relic22" parent="." instance=ExtResource( 2 )]
position = Vector2( 2521, 909 )

[node name="Relic11" parent="." instance=ExtResource( 2 )]
position = Vector2( 1542, 754 )

[node name="Relic3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1491, 1489 )

[node name="Relic4" parent="." instance=ExtResource( 2 )]
position = Vector2( 1394, 1304 )

[node name="Relic7" parent="." instance=ExtResource( 2 )]
position = Vector2( 2091, 1172 )

[node name="Relic19" parent="." instance=ExtResource( 2 )]
position = Vector2( 1919, 1091 )

[node name="Relic12" parent="." instance=ExtResource( 2 )]
position = Vector2( 2707, 1310 )

[node name="Relic13" parent="." instance=ExtResource( 2 )]
position = Vector2( 2626, 1378 )

[node name="Relic14" parent="." instance=ExtResource( 2 )]
position = Vector2( 2727, 1310 )

[node name="Relic10" parent="." instance=ExtResource( 2 )]
position = Vector2( 1765, 1178 )

[node name="Relic8" parent="." instance=ExtResource( 2 )]
position = Vector2( 2669, 1239 )

[node name="Relic9" parent="." instance=ExtResource( 2 )]
position = Vector2( 2729, 1236 )

[node name="Relic5" parent="." instance=ExtResource( 2 )]
position = Vector2( 1020, 1234 )

[node name="Relic6" parent="." instance=ExtResource( 2 )]
position = Vector2( 1222, 1094 )

[node name="Relic15" parent="." instance=ExtResource( 2 )]
position = Vector2( 1492, 1022 )

[node name="Relic29" parent="." instance=ExtResource( 2 )]
position = Vector2( 1469, 1125 )

[node name="Relic30" parent="." instance=ExtResource( 2 )]
position = Vector2( 1292, 1123 )

[node name="Relic16" parent="." instance=ExtResource( 2 )]
position = Vector2( 1547, 988 )

[node name="Relic17" parent="." instance=ExtResource( 2 )]
position = Vector2( 1529, 1028 )

[node name="Relic18" parent="." instance=ExtResource( 2 )]
position = Vector2( 1550, 1028 )

[node name="Relic32" parent="." instance=ExtResource( 2 )]
position = Vector2( 2246, 1394 )

[node name="Relic35" parent="." instance=ExtResource( 2 )]
position = Vector2( 2276, 1367 )

[node name="Relic34" parent="." instance=ExtResource( 2 )]
position = Vector2( 2204, 1448 )

[node name="Relic33" parent="." instance=ExtResource( 2 )]
position = Vector2( 2306, 1442 )

[node name="Relic36" parent="." instance=ExtResource( 2 )]
position = Vector2( 2302, 758 )

[node name="Relic40" parent="." instance=ExtResource( 2 )]
position = Vector2( 1933, 397 )

[node name="Relic37" parent="." instance=ExtResource( 2 )]
position = Vector2( 2395, 753 )

[node name="Relic38" parent="." instance=ExtResource( 2 )]
position = Vector2( 2489, 728 )

[node name="Relic39" parent="." instance=ExtResource( 2 )]
position = Vector2( 2593, 728 )

[connection signal="drop" from="PC" to="." method="_on_PC_drop"]
[connection signal="grab" from="PC" to="." method="_on_PC_grab"]
[connection signal="throw" from="PC" to="." method="_on_PC_throw"]
[connection signal="body_entered" from="Water" to="Water" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Water" to="Water" method="_on_Water_body_exited"]
[connection signal="pc_dry" from="Water" to="." method="_on_Water_pc_dry"]
[connection signal="pc_wet" from="Water" to="." method="_on_Water_pc_wet"]
